<resources>
    <string name="app_name">MovieLink</string>
    <string name="user" />
    <string name="search" />
    <string name="content_description_search" />
    <string name="content_description_user" />
    <string name="page_title">MovieLink</string>
    <string name="backcutton" />
    <string name="backbutton" />
    <string name="welcome">Welcome to MovieLink</string>
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Enter email</string>
    <string name="register">REGISTER</string>
    <string name="log">LOG IN</string>

</resources>